YINY-40:Potential fix of text padding, scrolling and overflow issue.

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -40,6 +40,7 @@ body {
   color: #FFFFFF;
   padding-top: 54px;
   padding-bottom: 98px;
+  overflow:auto;
 }
 
 #sidebar {
